'moderate' should be above 'little' . partner's exp should have 'doesn't care' Created at, Updated at : put a (GMT) behind Optimal number of partners Fix date popup make it darker Hide the 'is active mode' Keyword matching: convert lowercase kw In the matching page: show username or fullname | limit 1000     matching page: move username to the third column Percent of compatibility is calculated as: Average the close matches, and total the exact matches In the matching page: Insert column: percent of compatibility, next to user, sort by %compat
SQL:
ALTER TABLE `sayygo` CHANGE `created_at` `created_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP;
SQL//

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4369,4 +4369,6 @@ ul.select2-choices span {
 .keyword a{
     background: #7cdbfc;
     padding: 2px 4px;
+    text-transform: capitalize;
 }
+.datepicker table tr td.disabled, .datepicker table tr td.disabled:hover{color: #ccc}
